--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,6 @@ set(CMAKE_CXX_FLAGS_DEBUG, "${CMAKE_CXX_FLAGS_DEBUG}")
 add_subdirectory(lib)
 
 
-add_executable(uuidworker uuidworker.c connection.c)
+add_executable(uuidworker uuidworker.c connection.c bufpool.c uuid.c)
 
 target_link_libraries(uuidworker wxworker)
