--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_library(wxworker defs.h wxdo.h wxworker.c conf.c)
+add_library(wxworker defs.h wxdo.h wxworker.c conf.c dummyfd.c)
 target_link_libraries(wxworker ev)
