--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_library(wxworker STATIC defs.h wxworker.c conf.c dummyfd.c env.c shm.c)
+add_library(wxworker STATIC defs.h wxworker.c dummyfd.c shm.c wxworker.c env.c conf.c)
 target_link_libraries(wxworker ev)
